infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hse-pulse
  labels:
    name: hse-pulse
